--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,13 +1,105 @@
 .main-div {
-    font-size: 2em;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    position: absolute;
-    justify-content: space-between;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-height: 10%;
-    gap: 1em;
+  font-size: 2em;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  position: absolute;
+  justify-content: space-between;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 10%;
+  gap: 1em;
+}
+
+.servicesOutline {
+  background-color: grey;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.services {
+  background-color: grey;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 2em;
+  min-height: 300px;
+}
+
+h3 {
+  color: white;
+}
+
+.card {
+  background-color: white;
+  border-radius: 4px;
+  border: black;
+  height: 30em;
+  width: 20em;
+}
+
+.card-header {
+  height: 10%;
+  background-color: rgb(19, 36, 96);
+  color: white;
+  padding: 0.5em;
+}
+
+ul {
+  list-style-type: square;
+  font-size: smaller;
+  padding-left: 2em;
+}
+
+p {
+  font-size: smaller;
+  padding: 1em;
+}
+
+.testimonials {
+  background-color: rgb(19, 36, 96);
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+
+.testimonialsOutline {
+  display: flex;
+  background-image: none;
+  flex-direction: column;
+  background-color: rgb(19, 36, 96);
+  align-items: center;
+}
+
+.space {
+  display: block;
+  min-height: 100px;
+  height: 100px;
+  background-color: grey;
+}
+
+.testimonial-text {
+  color: white;
+}
+
+.testimonialCard {
+  border-radius: 4px;
+  border: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cgroup {
+  display: flex;
+  flex-direction: row;
+}
+
+.infoText {
+  padding-left: 0.7em;
 }
