Added header and footer to layout component, minor footer style changes, made footer a default export.

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -1,8 +1,7 @@
 .footer-div {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  font-family: "Arapey", serif;
+  justify-content: space-evenly;
   white-space: pre-wrap;
   @media (max-width: 42rem) {
     flex-direction: column;
