--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -24,6 +24,10 @@
 
 .menu-link {
   color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: stretch;
 }
 
 .link {
@@ -52,8 +56,13 @@
   color: black;
   list-style: none;
   margin: 0;
-  min-width: 180px;
-  padding: 5px;
-  text-align: right;
-  z-index: 3;
+  min-width: 100%;
+  padding: 25vh 0;
+  z-index: 4;
+  flex-direction: column;
+  width: 85vw;
+  height: 100vh;
+  justify-content: space-evenly;
+  position: fixed;
+  left: 0;
 }
