--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -4,12 +4,17 @@
   flex-direction: column;
   color: white;
   position: absolute;
-  justify-content: space-between;
-  top: 30%;
+  justify-content: flex-start;
+  top: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-height: 10%;
-  gap: 1em;
+}
+
+@media only screen and (max-width: 600px) {
+  .main-div {
+    font-size: 1em;
+  }
 }
 
 .servicesOutline {
