--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,8 +1,11 @@
+$base-blue: rgb(19, 36, 96);
+
 .header-div {
   height: 20%;
   min-height: 3em;
-  background-color: rgb(19, 36, 96);
+  background-color: $base-blue;
   z-index: 2;
+  text-decoration: none;
 }
 
 .logo {
@@ -20,14 +23,16 @@
   padding-top: 0.5em;
   padding-left: 0.5em;
   gap: 2em;
+  text-decoration: none;
 }
 
 .menu-link {
-  color: black;
+  color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  align-items: stretch;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
 }
 
 .link {
@@ -50,19 +55,47 @@
   height: 100%;
 }
 
+.menu-header {
+  display: flex;
+  flex-direction: row;
+  background-color: $base-blue;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .menu {
-  background: white;
+  background-color: $base-blue;
   border-radius: 3px;
   color: black;
   list-style: none;
   margin: 0;
   min-width: 100%;
-  padding: 25vh 0;
+  padding: 0 0;
   z-index: 4;
   flex-direction: column;
   width: 85vw;
-  height: 100vh;
-  justify-content: space-evenly;
+  height: 40vh;
+  display: flex;
+  justify-content: flex-start;
   position: fixed;
   left: 0;
+}
+
+.close-button {
+  color: white;
+}
+
+.close-button:hover {
+  opacity: 0.7;
+}
+
+.mobile-links {
+  padding-top: 2em;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.divider {
+  color: white;
 }
